syntax = "proto3";

package protocol;
option go_package = "./kernel/transport/protocol;protocol";

message ClientAuth {
  string name = 1;
  bytes internal = 2;
  uint32 flag = 3;
  string key = 4;
}

message SessionAuth {
  string token = 1;
  string mainHost = 2;
  string subHost = 3;
}